# libsconf

./: .gitignore  Makefile.am  README.md  configure.ac  sconf.3  sconf.c  sconf.h  sconf.pc.in
.github/workflows/: check.yml
tests/: test_api.c  test_parse.c
